# gp_rhce

./: .gitignore  CMakeLists.txt  README.md  odom_sim.yaml  package.xml
acados_ocp/mhe/: Makefile  acados_sim_solver_mhe.c  acados_sim_solver_mhe.h  acados_solver.pxd  acados_solver_mhe.c  acados_solver_mhe.h  main_mhe.c  main_sim_mhe.c  mhe.json
acados_ocp/mhe/mhe_constraints/: mhe_constraints.h
acados_ocp/mhe/mhe_cost/: mhe_cost.h  mhe_cost_y_0_fun.c  mhe_cost_y_0_fun_jac_ut_xt.c  mhe_cost_y_0_hess.c  mhe_cost_y_fun.c  mhe_cost_y_fun_jac_ut_xt.c  mhe_cost_y_hess.c
acados_ocp/mhe/mhe_model/: mhe_expl_ode_fun.c  mhe_expl_vde_adj.c  mhe_expl_vde_forw.c  mhe_model.h
acados_ocp/mpc/: Makefile  acados_sim_solver_mpc.c  acados_sim_solver_mpc.h  acados_solver.pxd  acados_solver_mpc.c  acados_solver_mpc.h  main_mpc.c  main_sim_mpc.c  mpc.json
acados_ocp/mpc/mpc_constraints/: mpc_constraints.h
acados_ocp/mpc/mpc_cost/: mpc_cost.h
acados_ocp/mpc/mpc_model/: mpc_expl_ode_fun.c  mpc_expl_vde_adj.c  mpc_expl_vde_forw.c  mpc_model.h
config/: arena_limits.yaml  arena_run.yaml  arena_traj_options.yaml  simulation_run.yaml  simulation_traj_options.yaml
config/arena/: arena_run.yaml  arena_traj_options.yaml
config/gazebo/: gazebo_run.yaml  gazebo_traj_options.yaml
include/: gp_mhe.h  gp_mhe_node.h  gp_mpc.h  gp_mpc_node.h
include/mhe/: gp_mhe.h  gp_mhe_node.h
include/mpc/: gp_mpc.h  gp_mpc_node.h
include/utils/: random_utils.h
launch/: mhe.launch  mocap_odom_wrapper.launch  mpc.launch  rhce.launch  visualizer_node.launch
launch/arena/: mocap_odom_wrapper.launch
launch/gazebo/: quadrotor_empty_world.launch
launch/mavros/: px4.launch  px4_config.yaml  px4_pluginlists.yaml
launch/rhce/: mhe.launch  mpc.launch  rhce.launch
launch/trajectory/: traj_publisher.launch
launch/visualize/: visualizer_node.launch
quads/: clara.xacro  clark_mhe.yaml  clark_mpc.yaml  hummingbird_mpc.yaml
quads/clara/: clara.xacro  clara_dmhe.yaml  clara_kmhe.yaml  clara_mpc.yaml
quads/clark/: clark.xacro  clark_kmhe.yaml  clark_mpc.yaml
quads/hummingbird/: hummingbird.xacro  hummingbird_dmhe.yaml  hummingbird_kmhe.yaml  hummingbird_mpc.yaml
scripts/: compile_models_for_build.py  train_gp.py
scripts/mocap/: mocap_odom_node.py
scripts/quad_opt/: quad_optimizer_mhe.py  quad_optimizer_mpc.py
scripts/sequential_launch/: sequential_mhe.py  sequential_mpc.py
src/gp/: GPDataset.py  GPyModelWrapper.py  gp_utils.py  gpy_model.py
src/mhe/: gp_mhe.cpp  gp_mhe_node.cpp
src/mocap/: mocap_odom_node.py
src/mpc/: gp_mpc.cpp  gp_mpc_node.cpp
src/quad_opt/: quad.py  quad_optimizer.py  quad_optimizer_mhe.py  quad_optimizer_mpc.py
src/sequential_launch/: sequential_mhe.py
src/trajectory/: reference_publisher_node.py  trajectories.py
src/utils/: quad.py  quad_opt_utils.py  utils.py
src/visualization/: visualization.py  visualizer_node.py
